<resources>
    <string name="app_name">PassManager</string>
    <string name="title_activity_main">PassManager</string>

    <!-- AboutActivity -->
    <!--AlphanumericActivity-->
    <!--ChoiceActivity-->
    <!--SetupActivity-->
    <!--AuthenticationActivity-->
    <string name="fingerprint_security_not_enabled">Lock screen security not enabled in Settings</string>
    <string name="fingerprint_permission_not_enabled">Fingerprint authentication permission not enabled</string>
    <string name="fingerprint_no_fingerprints_registered">Register at least one fingerprint in Settings</string>
    <string name="incorrect_authentication_pin">The pin you entered was incorrect.\nYou were not granted access.</string>
    <string name="incorrect_authentication_pin_title">Incorrect PIN</string>
    <string name="dialog_ok">OK</string>
    <string name="enter_current_pin">Enter your current PIN</string>
    <!--MainActivity-->
    <string name="snackbar_undo_item_name">account</string>
    <string name="snackbar_undo_multiple_delete">s were deleted.</string>
    <string name="snackbar_undo_single_delete">was deleted.</string>
    <string name="snackbar_undo_undo">Undo</string>

    <string name="toolbar_selection_counter">selected</string>
    <string name="toolbar_search_hint">Search accounts</string>
    <!--PinActivity-->
    <string name="pin_confirmation">Confirm your PIN</string>
    <string name="wrong_pin_text">Pins must match. Please try again.</string>
    <string name="wrong_pin_title">Wrong PIN</string>
    <!--SettingsActivity-->
    <string name="dialog_export">Export</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_permissions">App Permissions</string>
    <string name="required_permissions">You need to allow access to Storage.</string>
    <string name="dialog_loading">Importing&#8230;</string>
    <string name="imported_successfully">All passwords imported successfully</string>
    <string name="pin_updated">PIN was successfully updated.</string>
    <!--ViewPasswordActivity-->
    <string name="account_name_copied">Accout name copied to clipboard.</string>
    <string name="passsword_copied">Password copied to clipboard.</string>
    <string name="view_delete_confirmation">Do you want to delete this entry ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <!--SimplePasswordRecyclerAdapter-->

    <!--AddDialog-->
    <string name="type_name" formatted="true">%s name</string>
    <string name="required_fields">You have to enter all the values</string>
    <string name="account_added">Account successfully added!</string>
    <string name="account_error">There was an error. Try again later</string>
    <!--EditDialog-->
    <string name="account_updated">Account successfully updated!</string>
    <!--GeneratePwdDialog-->
    <string name="pwd_length" formatted="true">Length (%d)</string>
    <!--GenerateSettingsDialog-->
    <string name="include_type_error">You must include atleast one type.</string>
    <!--ImportDialog-->
    <string name="dialog_import">Import</string>
    <string name="dialog_select_directory">Select directory</string>
    <!--DtabaseController-->
    <string name="header_type">Type</string>
    <string name="header_alias">Alias</string>
    <string name="header_username">Username</string>
    <string name="header_password">Password</string>
    <string name="header_created">Created</string>
    <string name="export_success_title">Success</string>
    <string name="empty_database_title">Empty database</string>
    <string name="empty_database_text">To export, you need atleast\none recorded password.</string>
    <string name="import_database_title">Import file content?</string>
    <string name="import_database_text">All current passwords will be deleted and replaced by the imported ones.</string>
    <!--DatabaseHelper-->
    <!--FingerprintHandler-->
    <string name="fingerprint_authentication_failed">Authentication failed.</string>

    <!--ItemType-->
    <!--SimplePassword-->

    <!--App-->
    
    <!-- Layouts -->
    <string name="navigate_action_bar_up_description">Nagivate up</string>
    
    <string name="enter_passcode" formatted="true">Enter a %d-Digit PIN</string>
    <string name="enter_current_passcode" formatted="true">Enter your %d-Digit PIN</string>
    <string name="confirm_passcode" formatted="true">Confirm your %d-Digit PIN</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pin_modify">pinModify</string>
    <string name="card_selected">Selected</string>
    <string name="content_desc_type">Type</string>
    <string name="content_desc_pwd_settings">Password generation settings</string>
    <string name="content_desc_gen_pwd">Generate a password</string>
    <string name="content_desc_copy_pwd">Copy password</string>
    <string name="dialog_apply">Apply</string>
    <string name="generation_settings_title">Generation Settings</string>
    <string name="lowercase_characters">Lowercase Characters</string>
    <string name="uppercase_characters">Uppercase Characters</string>
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="content_desc_more">More</string>
    <string name="content_desc_lock_image">Lock image</string>
    <string name="label_username">Username:</string>
    <string name="label_username_email">Username/email:</string>
    <string name="label_password">Password:</string>
    <string name="show_password">Show Password</string>
    <string name="content_desc_menu">menu</string>
    <string name="content_desc_favorite">Favorite</string>
    <string name="content_desc_edit">Edit</string>
    <string name="content_desc_delete">Delete</string>
    <string name="dialog_add">Add</string>
    <string name="export_dialog_text">All your passwords will be exported to:</string>
    <string name="content_desc_fingerprint_able">Fingerprint able</string>
    <string name="export_dialog_text_success">All passwords were exported to:</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_sort_by">Sort by</string>
    <string name="toolbar_sort_name">Name</string>
    <string name="toolbar_sort_type">Type</string>
    <string name="toolbar_sort_date">Date</string>
    <string name="toolbar_settings">Settings</string>
    <string name="dialog_save">Save</string>
    <string name="choose_your_pin_length">Choose your PIN length</string>
</resources>
