<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/medium_padding_view"
        android:padding="@dimen/small_padding_view">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"/>

        <ImageView
            android:id="@+id/iv_view_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/content_desc_favorite"
            fab:srcCompat="@drawable/ic_star_border_white_24dp"/>

        <ImageView
            android:id="@+id/iv_view_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/content_desc_edit"
            fab:srcCompat="@drawable/ic_mode_edit_white_24dp"/>

        <ImageView
            android:id="@+id/iv_view_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="10dp"
            android:contentDescription="@string/content_desc_delete"
            fab:srcCompat="@drawable/ic_delete_white_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_http_black_36dp"
            android:clickable="true"
            android:contentDescription="@string/content_desc_type"
            android:id="@+id/pwd_type"/>
    </LinearLayout>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </View>
</LinearLayout>