<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_https_black_24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:contentDescription="@string/content_desc_lock_image"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding_view">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/medium_padding_view"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_pwd_length"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_pwd_length"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:paddingTop="@dimen/medium_padding_view"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_generate_pwd"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar3"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp"
                android:id="@+id/iv_settings"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/content_desc_pwd_settings"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_refresh_black_24dp"
                android:id="@+id/iv_generate"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/content_desc_gen_pwd"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_content_copy_black_24dp"
                android:id="@+id/iv_copy"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/content_desc_copy_pwd"/>
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/medium_padding_view"
            android:layout_weight="1">

            <Button
                android:text="@string/dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:id="@+id/btn_generate_cancel"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"/>

            <Button
                android:text="@string/dialog_apply"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:id="@+id/btn_apply"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:stateListAnimator="@null"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>