<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:animateLayoutChanges="true"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        android:windowSoftInputMode="adjustResize|stateHidden"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_desc_lock_image"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                app:srcCompat="@drawable/ic_https_black_24dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/content_desc_type"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:id="@+id/linear_type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="horizontal">
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/type_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/account_alias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="80"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="1"
                    android:dropDownHeight="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:hint="Username/email"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLength="80"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                android:text="@string/content_desc_gen_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gene_pwd"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_password"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <Button
                android:text="@string/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:text="@string/dialog_add"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/btn_add"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:stateListAnimator="@null"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>